# autocompiler

./: pyproject.toml  requirements.txt
autocompile/: __main__.py  main.py
