[tool.poetry]
name = "autocompile"
version = "0.1.0"
description = ""
authors = ["PatriotRossii <patriotrossii2019@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
PyGithub = "^1.57"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
